--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,3 +1,5 @@
 [deps]
-ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
+PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
+ProfileView = "c46f51b8-102a-5cf2-8d2c-8597cb0e0da7"
